CLUSTER-US/cluster-a/4.EKS-CRD/ciliumx/ClusterwideNetworkPolicy/route53-ingress.yaml
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: "route53-all-namespaces"
spec:
  enableDefaultDeny:
    egress: false # !!!
    ingress: false # !!!
  endpointSelector:
    matchExpressions:
      - key: "io.kubernetes.pod.namespace"
        operator: "NotIn"
        values:
        - "kube-system"
      - key: "k8s-app"
        operator: "NotIn"
        values:
        - kube-dns
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
          rules:
            dns:
              - matchPattern: "*"
---
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: nginx-admission-webhook-policy
spec:
  enableDefaultDeny:
    egress: false # !!!
    ingress: false # !!!
  endpointSelector:
    #matchExpressions:
    #  - key: "kubernetes.io/metadata.name"
    #    operator: "NotIn"
    #    values:
    #    - "dev"
    matchLabels:
      app.kubernetes.io/name: ingress-nginx
      app.kubernetes.io/component: admission-webhook
  ingress:
    - fromEntities:
      - cluster
      toPorts:
      - ports:
        - port: "443"
  egress:
    - toEntities:
      - cluster
      - kube-apiserver
    - toFQDNs:
      - matchPattern: "*.cluster.local"
